# MyLearn

./: .gitIgnore  README.md  README_zh.md  index.md
CSharp/: Calculator.cs  MathControl.cs
CSharp/Study-1-LuckDrawForm/: CreateDate  Form1.Designer.cs  Form1.cs  Luck.cs  LuckForm.csproj  LuckForm.sln  Program.cs  Properties
CSharp/Study-1-LuckDrawForm/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
CSharp/Study-2-Calculator/: Calculator.cs  Form1.Designer.cs  Form1.cs  Program.cs  WindowsFormsApp1.csproj  WindowsFormsApp1.sln
CSharp/Study-2-Calculator/Properties/: AssemblyInfo.cs
CSharp/Study-3-ComputePractice/: Form1.Designer.cs  Form1.cs  Form1.resx  MathGame.csproj  MathGame.sln  MathGameControler.cs  Program.cs
CSharp/Study-3-ComputePractice/Properties/: AssemblyInfo.cs  Resources.Designer.cs
C__Cplus/: NormalTree.h
ciscoPacker/: README.MD  Route.pkt  Vlan.pkt
iOS:SwiftUI/ProvinceGame/: MemoryGame.swift
ios/swiftui/: README.md
ios/swiftui/ProvinceGame/: AppDelegate.swift  ContentView.swift  ProvinceMemoryGame.swift  README.MD  SceneDelegate.swift
ios/swiftui/ProvinceGame/Assets.xcassets/AccentColor.colorset/: Contents.json
opencv/opencv-gstreamer-example/h264-receive/: CMakeLists.txt  README.md  main.cpp
qt/qmlSplashTest/: README.md  Splash.qml  qml.qrc
qt_qml/qmlSplashTest/: MainView.qml  README.md  Splash.qml  main.cpp  main.qml  qml.qrc  qmlSplashTest.pro
数据结构/: Partition.cpp
